# quick-scripts

./: .gitignore  doit.sh  es-pub.py  es.py  mos-pub.py  mos-sub.py  mos-sub2.py  parse_wordpress_post.py  pfs.py  pull-newsnow.py  pull_newsnow.py  reddtech.tgz  requirements.txt  smartos-vmtools.tgz
app/: docker-compose.yml
c/: CMakeCache.txt  CMakeLists.txt  Makefile  clip  clip.c  cmake_install.cmake  install_manifest.txt  mybook.h  testA.c
c/a/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  one.c  printA.s
c/arm64/: C.java  CConstants.java  CMakeLists.txt  CTokenManager.java  Makefile  cmake_install.cmake  hello_world.c  test1  test1.c  test1.java
c/calc/: CMakeLists.txt  Makefile  calc.cpp  cmake_install.cmake
c/signals/: a.out  test.c
c/sub/: CMakeLists.txt  Makefile  a.out  cmake_install.cmake  env  env.c  fork  fork.c
c/thread/: a.out  test.c
https/: .sconsign.dblite  SConstruct  captureCheck.py  ciphertext.enc  client  client.py  client2  doit.sh  http.cpp  https.py  main.cpp  nginx-selfsigned.crt  requirements.txt  tclient  tls_socket.cpp  tls_socket.h
https/archive/: captureCheck.py  client.cpp  ja3_capture.data  pcap.found  ssl.tgz
https/crypto/: Makefile.in  VERSION  crypto.sym  crypto_portable.sym  libcrypto.la  libcrypto_la-cpt_err.lo  libcrypto_la-cryptlib.lo  (+6 more)
leetcode/: a.out  addTwoNumbers  addTwoNumbers.c  addTwoNumbersC  addTwoNumbersCn  leetcode.code-workspace
lp/: Dockerfile
process/: a.out  hexdump.c  shell  test  test.js  test1  test1.c  test2  test2.c  test2.py  test3  test3.c  test4  test4.c  test5  test5.c
reddtech/: config.toml
web/: one.py
(+1398 files in other folders)
